--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ endforeach()
 
 set (CMAKE_CXX_STANDARD 17)
 
+add_definitions(-DOFFSCREEN_RENDERING)
+
 if (AllowProcedurals)
 	add_definitions(-DUSE_PROCEDURALS)
 endif ()
